about page bug fixed

--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
         </div>
     <ul>
         <li><a href="/template/index.html">Home</a></li>
-        <li><a href="/template/about.html"><About</a></li>
+        <li><a href="/template/about.html">About</a></li>
         <li><a href="/template/services.html">Services</a></li>
         <li><a href="/template/contact.html">Contact</a></li>
     </ul>
