navigation menu added

--- a/template/index.html
+++ b/template/index.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <title>Home page</title>
 </head>
 <body>
    <header>
     <section class="nav">
         <div class="logo">
-            <img src="/assets/images/logo.png" alt="logo">
+            <img src="/assets/images/logo1.png" alt="logo">
         </div>
     <ul>
-        <li><a href="/template/index.html">Home</a></li>
+        <li><i class="fa-solid fa-house"></i> <a href="/template/index.html">Home</a></li>
         <li><a href="/template/about.html">About</a></li>
         <li><a href="/template/services.html">Services</a></li>
-        <li><a href="/template/contact.html">Contact</a></li>
+        <li><i class="fa-solid fa-phone"></i> <a href="/template/contact.html">Contact</a></li>
     </ul>
     </section>
    </header>
+   <section class="hero">
+    <h1>
+        I am <span>odhiambo athooh</span>, <br> a software engineer.
+    </h1>
+   </section>
 </body>
 </html>
